--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,9 @@
-.App {
-  text-align: center;
+.main-btn {
+  width: 185px;
+  letter-spacing: 1.5px;
+  border-radius: 3px;
+  margin-top: 1rem;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.btn:hover {
+  opacity: 0.8;
 }
