--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.main-btn {
+/* .main-btn {
   width: 185px;
   letter-spacing: 1.5px;
   border-radius: 3px;
@@ -7,3 +7,6 @@
 .btn:hover {
   opacity: 0.8;
 }
+.logo {
+  
+} */
